--- a/인프라 정리.md
+++ b/인프라 정리.md
@@ -1,5 +1,10 @@
 # 인프라 정리
 ## IT 인프라란?
 - 애플리케이션을 가동시키기 위해 필요한 하드웨어나 OS, 미들웨어, 네트워크 등 시스템의 기반을 말한다.
-- 기능적인 요구사항 : 해당 시스템이 어떤 기능을 하는지, 무엇을 할 수 있는지
-- 비기능적인 요구사항 : ㅇ
+- 기능적인 요구사항 : 해당 시스템이 어떤 기능을 하는지, 무엇을 할 수 있는지에 대한 요구사항
+- 비기능적인 요구사항 : 성능, 안정성, 확장성 보안 등과 같은 요구사항
+- 인프라는 상기 비기능적인 요구사항과 관련이 있다.
+
+## 인프라 구성 요소
+- 하드웨어 : 서버 장비 본체나 데이터를 저장하기 위한 스토리지, 전원 장치 등
+- 네트워크 : 사용자가 원격으로 접근할 수 있도록 서버를 연결하는 도구들
