Update E-1) 낙관적 락 & 비관적 락.md

--- a/Database/E-1) 낙관적 락 & 비관적 락.md
+++ b/Database/E-1) 낙관적 락 & 비관적 락.md
@@ -75,7 +75,7 @@
 ```
 
 ### 낙관적 락 pseudo code
-- Transaction은 잡지 않습니다.
+- Transaction은 잡지 않는다.
 - 그렇기 때문에 만약 충돌이 발생하여 수정을 못한 부분에 대해서는 롤백에 대한 책임을 Application 단에서 지며 Application에서 롤백을 수동으로 해주어야 한다.
 
 ```
