Update and rename Java/A-1) 바이트코드 조작(리플렉션, 다이나믹 프록시, 애노테이션 프로세서).md to Java/바이트코드 조작(리플렉션, 다이나믹 프록시, 애노테이션 프로세서)/리플렉션.md

--- a/Java/바이트코드 조작(리플렉션, 다이나믹 프록시, 애노테이션 프로세서)/리플렉션.md
+++ b/Java/바이트코드 조작(리플렉션, 다이나믹 프록시, 애노테이션 프로세서)/리플렉션.md
@@ -1,13 +1,4 @@
-# 바이트코드 조작(리플렉션, 다이나믹 프록시, 애노테이션 프로세서)
-
-## 자바의 바이트코드를 조작하는 방법
-- 리플렉션 기법이 아니라 그냥 바이트코드 자체를 조작하는 라이브러리도 있다.
-  - CGLib (Code Generator Library) : 리플렉션을 이용한 다이나믹 프록시 생성도구
-  - ASM 바이트코드 조작 (low level)
-  - Javassist
-  - ByteBuddy 바이트코드 조작 (ASM을 기반으로 만듦)
-
-## 리플렉션
+# 리플렉션
 > 스프링의 Dependency Injection은 어떻게 동작할까?
 
 ```java
@@ -18,7 +9,7 @@ public class BookService {
 }
 ```
 
-### 리플렉션이란?
+## 리플렉션이란?
 - 리플렉션이란 [Class 정보를 담는 객체]를 이용해 해당 클래스의 정보를 분석해내는 프로그래밍 기법을 의미한다.
 - 즉 구체적인 클래스 타입, 정보를 알지 못하더라도 객체 이름("my.ClassName")으로 런타임 시점에서 [리플렉션 객체의 바이트코드]를 이용해 내가 원하는 객체와 메서드를 사용할 수 있다는 말이다.
 - 동적 바인딩이 되지 않던 자바에서, 리플렉션 기법을 이용해 런타임에 동적인 바인딩을 제공하는 것이라고 이해하면 쉽다.
@@ -43,7 +34,7 @@ public static Class<?> forName(String className)
                         throws ClassNotFoundException {...}
 ```
 
-### 리플렉션 사용해보기, java.lang.Class<T>
+## 리플렉션 사용해보기, java.lang.Class<T>
 ```java
 public class App {
     public static void main(String[] args) {
@@ -69,7 +60,7 @@ public class App {
 
 - 이렇게 해당 클래스의 정보를 얻거나, 컴파일 이후 런타임에 동적으로 인스턴스를 만들 수 있다.
 
-### 리플렉션과 어노테이션
+## 리플렉션과 어노테이션
 - Class<T> 에는 getAnnotation()이라는 메서드가 있다.
 - 그래서 클래스에 어노테이션을 달고 아래와 같은 코드를 작성해보면 어노테이션들이 나와야할 것 같지만 실제로는 아무런 값도 찍히지 않는다.
 
@@ -113,7 +104,7 @@ Arrays.stream(User.class.getDeclaredFields()).forEach(
 );
 ```
 
-### 리플렉션 API - 인스턴스 생성 , 클래스 수정
+## 리플렉션 API - 인스턴스 생성 , 클래스 수정
 ```java
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
@@ -147,7 +138,7 @@ m.setAccessible(true); // 접근제어자(private) 를 무시함.
 m.invoke(메소드 파라메타); // 메서드 실행
 ```
 
-### 나만의 DI 컨테이너 만들어보기
+## 나만의 DI 컨테이너 만들어보기
 - 스프링 컨테이너에서 getBean()은 어떻게 동작하는 걸까? 간단한 나만의 어노테이션 컨테이너를 만들어보자.
 ```java
 public Class BookService(){
@@ -208,7 +199,7 @@ public MemberRepository memberRepository() {
 }
 ```
 
-### 주의사항
+## 주의사항
 - 리플렉션은 프레임워크를 포함해서 다양한 곳에서 활용된다.
 
 ```
